# dbt2lookml

./: .gitignore  .vulture  CHANGELOG.md  CONTRIBUTING.md  README.md  example.config.yaml  mkdocs.yml  publishing.md  pyproject.toml  tox.ini  vulture_whitelist.py
.github/workflows/: build.yml  docs.yml  publish.yml  test.yml
dbt2looker_bigquery/: cli.py  generator.py  looker.py  models.py  parser.py  schema_parser.py
dbt2lookml/: cli.py  enums.py  exceptions.py  generators.py  log.py  models.py  parser.py  parsers.py  utils.py  validation.py  validator.py
dbt2lookml/generated_models/: dbt_catalog_v1.py  dbt_manifest_v12.py
dbt2lookml/generators/: __init__.py  base.py  dimension.py  explore.py  lookml.py  measure.py  parser.py  utils.py  view.py
dbt2lookml/models/: __init__.py  column_collections.py  dbt.py  looker.py  schema.py
dbt2lookml/parsers/: __init__.py  base.py  catalog.py  exposure.py  model.py
docs/: changelog.md  index.md
docs/development/: contributing.md
docs/getting-started/: configuration.md  installation.md  quick-start.md
docs/user-guide/: advanced-features.md  basic-usage.md
example/: README.md
example/default/example/retail_data/: example_retail_data__fact_daily_sales.view.lkml
example/models/prod/: pages.yml
example/skip-explore/example/retail_data/: example_retail_data__fact_daily_sales.view.lkml
example/use-table-name/example/retail_data/: fact_daily_sales_v1.view.lkml
schemas/dbt/: catalog.v1.json  manifest.v12.json
tests/: compare_end_to_end.py  test_array_prefix_stripping.py  test_cli.py  test_cli_filtering_integration.py  test_dimension_group.py  test_enums.py  test_extended_timeframes.py  test_generator.py  test_generators.py  test_generators_utils.py  test_include_exclude_with_fixtures.py  test_integration.py  test_iso_fields_config.py  test_logger.py  test_model_filtering.py  test_models.py  test_models_dbt.py  test_parser.py  test_parsers_catalog.py  test_parsers_exposure.py  test_parsers_model.py  test_schema_parser.py  test_sql_reference_generation.py  test_timeframe_filtering.py  test_unidecode.py  test_utils.py
tests/expected/: test1.view.lkml  test2.view.lkml  test3.view.lkml
tests/features/: test_coverage.py  test_dimension_groups.py  test_filtering.py  test_model_filtering.py  test_timeframe_filtering.py  test_timeframes.py
tests/fixtures/: catalog.json  manifest.json
tests/fixtures/expected/: d_item_v3.view.lkml  d_item_v3.view.lkml.old  dq_icasoi_current.view.lkml  dq_icasoi_current.view.lkml.old  dq_icasoi_current_with_explore.view.lkml  dq_item_ebo_current.view.lkml  f_store_sales_day_selling_entity_v1.view.lkml  f_store_sales_day_selling_entity_v1.view.lkml.old  f_store_sales_waste_day_v1.view.lkml  f_store_sales_waste_day_v1.view.lkml.old  f_strategic_segments_main.view.lkml  sales_waste.view.lkml
tests/fixtures/expected/conlaybi/item_dataquality/: dq_icasoi_current.view.lkml
tests/fixtures/expected/conlaybi/item_versioned/: d_item_v3.view.lkml
tests/fixtures/expected/org/: d_item_v3.txt  dq_icasoi_current_view.txt  dq_item_ebo_current.txt  f_store_sales_day_selling_entity_v1.txt  f_store_slaes_waste_day1.txt
tests/generator/: test_custom_timeframe.py  test_datetime_dimension.py  test_dtype.py
tests/integration/: test_cli.py  test_end_to_end.py
tests/test_parsers/: test_base.py  test_catalog.py  test_exposure.py  test_model.py
tests/unit/: test_cli.py
tests/unit/core/: test_config.py  test_enums.py  test_utils.py  test_validator.py
tests/unit/generators/: test_create_dimension_comprehensive.py  test_create_nested_view_comprehensive.py  test_dimension.py  test_dimension_conflict_rename.py  test_dimension_extended.py  test_dimension_missing_coverage.py  test_explore.py  test_generator.py  test_get_column_name_comprehensive.py  test_group_strings_comprehensive.py  test_lookml_measure_comprehensive.py  test_measure.py  test_recurse_joins_comprehensive.py  test_safe_name_comprehensive.py  test_transform_date_column_name_comprehensive.py  test_utils.py  test_view.py
tests/unit/parsers/: test_catalog.py  test_catalog_dimension_naming.py  test_exposure.py
