[tool.poetry]
name = "dbt2lookml"
version = "0.13.1"
description = "Generate lookml view files from bigquery dbt models "
authors = []
readme = "README.md"
homepage = "https://github.com/rognerud/dbt2looker-bigquery"
repository = "https://github.com/rognerud/dbt2looker-bigquery"

[tool.poetry.dependencies]
lkml = ">=1.1"
pydantic = ">=2.9"
PyYAML = ">=5.0"
python = ">=3.12.0,<4.0"
typing-extensions = ">=4.0"
importlib-metadata = ">=4"
rich = ">=13.9.4"
pytest-mock = "^3.14.0"

[tool.poetry.group.dev.dependencies]
debugpy = "^1.8.8"
pytest = "^8.3.3"
pytest-mock = "^3.14.0"
pytest-cov = "^6.0.0"

[tool.uv]

[tool.uv.workspace]
members = ["dist"]

[tool.poetry.scripts]
dbt2lookml = "dbt2lookml.cli:main"

[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"

[tool.bumpversion]
current_version = "0.13.2"
parse = "(?P<major>\\d+)\\.(?P<minor>\\d+)\\.(?P<patch>\\d+)"
serialize = ["{major}.{minor}.{patch}"]
search = "{current_version}"
replace = "{new_version}"
regex = false
ignore_missing_version = false
tag = false
sign_tags = false
tag_name = "v{new_version}"
tag_message = "Bump version: {current_version} → {new_version}"
allow_dirty = false
commit = false
message = "Bump version: {current_version} → {new_version}"
commit_args = ""

[pytest]
mock_use_standalone_module = true
